renderer/terminal/terminal.css
      html,
      body {
        width: 100%;
        height: 100%;
        margin: 0;
        padding: 0;
      }
      /* Se agrega padding interno para dar margen */
      #terminal-container {
        width: 100%;
        height: 100%;
        padding: 8px;
        box-sizing: border-box;
        background-color: #1e1e1e;
        border: 1px solid #333;
        border-radius: 6px;
        box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
        overflow: hidden;
      }

      /* Evitar desbordes cuando las líneas son muy largas */
      .xterm-viewport {
        overflow-y: auto !important;
      }

